Made popover placement bottom on desktop and left on mobile. Fixed French mobile navigation popover titles. Changed results page print button to email on mobile. Made the minimum height of the question content 200px on mobile.

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -320,7 +320,7 @@
 			}
 		}
 		.select-label-wrap {
-			margin-top: 8px;
+			margin-top: 0px;
 			display: block;
 			width: 100%;
 			height: 49px;
@@ -358,7 +358,7 @@
 			}
 		}
 		.select-label-wrap {
-			margin-top: 8px;
+			margin-top: 0px;
 			display: block;
 			width: 277px;
 			height: 50px;
