--- a/app/scss/brands/maytag/_results.scss
+++ b/app/scss/brands/maytag/_results.scss
@@ -150,6 +150,12 @@
 					margin-left: 10px;
 					padding-bottom: 3px;
 				}
+				.btn-text-email {
+					margin-top: -2px;
+				}
+				.btn-text-email::after {
+					content: '';
+				}
 			}
 			.btn-text {
 				font-size: 17px;
@@ -194,6 +200,12 @@
 					content: url(../img/cta-arrow.png);
 					margin-left: 10px;
 					padding-bottom: 3px;
+				}
+				.btn-text-email::after {
+					content: '';
+				}
+				.btn-text-email img {
+					margin-top: -2px;
 				}
 			}
 			.result-inner {
