--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -483,7 +483,7 @@ div.mobile-app-nav-arrows {
 @media(max-width:1023px) {
 
 	.main {
-		overflow-x: hidden;
+		overflow: hidden;
 		-webkit-overflow-scrolling: touch;
 	}
 
@@ -500,7 +500,7 @@ div.mobile-app-nav-arrows {
 	}
 
 	.app-content-main-top {
-		width: 85% !important;
+		width: 100% !important;
 		margin: initial !important;
 		padding-top: 0px;
 		padding-bottom: 0px;
@@ -559,6 +559,7 @@ div.mobile-app-nav-arrows {
 	}
 
 	.app-content-main-top-left {
+		width: 87% !important;
 		padding-left: 50px;
 	}
 
@@ -948,13 +949,13 @@ div.mobile-app-nav-arrows {
 
 	a.answer-box.checkbox-4, a.answer-box.radio-2, a.answer-box.radio-3, a.answer-box.radio-4 {
 		width: 90%;
-		height: 60px;
+		height: 55px;
 		border-right: 4px solid #999999;
 		margin: 6px auto;
 
 		.selected .select-icon {
 			left: 18px;
-			top: 22px;
+			top: 14px;
 		}
 
 		.select-icon {
@@ -966,7 +967,7 @@ div.mobile-app-nav-arrows {
 
 		.label-wrap {
 			left: 62px;
-			height: 60px;
+			height: 100%;
 			max-width: 75%;
 		}
 
